--- a/suckless/st/Makefile
+++ b/suckless/st/Makefile
@@ -41,9 +41,9 @@ dist: clean
 	rm -rf st-$(VERSION)
 
 install: st
-	#mkdir -p $(DESTDIR)$(PREFIX)/bin
-	#cp -f st $(DESTDIR)$(PREFIX)/bin
-	#chmod 755 $(DESTDIR)$(PREFIX)/bin/st
+	mkdir -p $(DESTDIR)$(PREFIX)/bin
+	cp -f st $(DESTDIR)$(PREFIX)/bin
+	chmod 755 $(DESTDIR)$(PREFIX)/bin/st
 	mkdir -p $(DESTDIR)$(MANPREFIX)/man1
 	sed "s/VERSION/$(VERSION)/g" < st.1 > $(DESTDIR)$(MANPREFIX)/man1/st.1
 	chmod 644 $(DESTDIR)$(MANPREFIX)/man1/st.1
